Fixed breadcrumb links underlining too long (issue [#8](https://github.com/pmoreno-rodriguez/grav-theme-future2021/issues/8))

--- a/assets/css/misc.css
+++ b/assets/css/misc.css
@@ -92,3 +92,10 @@
 #breadcrumbs {
   padding-inline-start: 0rem;
 }
+#breadcrumbs span {
+  padding: 0rem;
+}
+#breadcrumbs i {
+  padding: 0 1rem;
+  width: 0 !important;
+}
